# k-heritage-recipe-ai

./: .gitignore  INITIAL.md  README.md  docker-compose.yml  todo.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_pgvector_native_knn.py  0003_recipe_embedding.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/auth/: __init__.py  deps.py  jwt.py  password.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/jobs/: __init__.py  (+5 more)
apps/api/tests/: conftest.py  test_admin.py  test_admin_heritage_backfill.py  test_admin_trends.py  test_alembic_migrations.py  test_auth.py  test_backfill_pgvector_embedding.py  test_documents_detail.py  test_embeddings_gemini.py  test_embeddings_mock.py  test_embeddings_vertex.py  test_favorites.py  test_heritage_backfill.py  test_heritage_gihohak.py  test_heritage_hybrid.py  test_heritage_jangseogak.py  test_heritage_koreanstudies.py  test_heritage_live_adapter.py  test_heritage_live_gihohak_adapter.py  test_heritage_live_koreanstudies_adapter.py  test_heritage_live_nlk_adapter.py  test_heritage_multi_source.py  test_heritage_nlk.py  test_httpx_log_redact.py  test_licensing.py  test_llm_gemini.py  test_notifications.py  test_pdf_license_footer.py  test_recipe_license_notice.py  test_recipes.py  test_recipes_related.py  test_recipes_related_vector.py  test_refresh_scheduler.py  test_seed.py  test_trends.py  test_trends_adapter.py  test_trends_candidates.py  test_trends_debug.py  test_trends_discovery.py  test_trends_food_filter.py  (+11 more)
(+117 files in other folders)
