[project]
name = "k-heritage-recipe-api"
version = "0.1.0"
description = "Backend API for K-Heritage Recipe AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<0.120",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "httpx>=0.27",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-jose>=3.3",
    "types-passlib>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
